# mcapt

./: .gitignore  README.md  pyproject.toml
mcapt/: hand.py  hand_joint_conb.csv  mcapt.py  plot_3d.py  pose.py  tcpclient.py
tests/: test_mcapt.py
