[tool.poetry]
name = "mcapt"
version = "0.1.0"
description = ""
authors = ["MURATA Mitsuharu <hikari.photon+dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.2"
opencv-python = "^4.5.5"
mediapipe = "^0.8.9"
pandas = "^1.4.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pyproject-flake8 = "^0.0.1-alpha.2"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
